# quant-finance-py

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: LEARN.md
src/quantfinlib/: __init__.py
src/quantfinlib/alpha/: __init__.py  alpha_backtester.py  alpha_context.py  alpha_ensemble.py  alpha_factor.py  alpha_report.py  alpha_validation.py  calendar_anomalies.py  factors.py  fama_macbeth.py  (+3 more)
tests/: test_alpha_backtester.py  test_alpha_calendar_anomalies.py  test_alpha_ensemble.py  test_alpha_fama_macbeth.py  test_alpha_online_learner.py  test_alpha_report.py  test_alpha_validation.py  test_backtest_benchmark.py  test_backtest_block_bootstrap.py  test_backtest_drawdown.py  test_backtest_engine.py  test_backtest_monte_carlo_shuffle.py  test_backtest_overfit.py  test_backtest_performance.py  test_backtest_portfolio_construction.py  test_backtest_portfolio_optimizer.py  test_backtest_position_sizing.py  test_backtest_purged_kfold.py  test_backtest_sharpe_validation.py  test_backtest_trade_analytics.py  test_bar.py  test_commodities_curve.py  test_crb_book.py  test_crb_execution.py  test_crb_scenarios.py  test_crb_universe_ledger.py  test_credit_curve_cds.py  test_credit_cva.py  test_credit_spreads.py  test_data_loaders.py  test_data_tick_file.py  test_dsl.py  test_execution_algos.py  test_execution_benchmark.py  test_execution_portfolio.py  test_execution_routing.py  test_execution_schedulers.py  test_fix_codec.py  test_fx_aggregated_book.py  test_fx_currency_pair.py  (+73 more)
tools/crossport/: Probe.java  compare.py  cpp.out  java.out  probe.cpp  probe.py  py.out
(+239 files in other folders)
